[package]
name = "ping_pong_demo"
version = "0.1.0"
authors = ["FujiApple <fujiapple852@gmail.com>"]
description = "Ping Pong demo application"
repository = "https://github.com/fujiapple852/rust-daml-bindings"
license = "Apache-2.0"
keywords = ["daml", "api", "ledger"]
categories = ["development-tools"]
edition = "2021"
rust-version = "1.59.0"

[dependencies]
daml = { path = "../../daml", features = [ "grpc", "sandbox", "util", "macros" ] }
tokio = { version = "1.17.0", features = [ "macros", "rt-multi-thread" ] }
futures = "0.3.21"
chrono = "0.4.19"
tracing = "0.1.31"
tracing-subscriber = { version = "0.3.9", features = ["env-filter", "json"] }
anyhow = "1.0.55"

[workspace]