[package]
name = "rental_demo"
version = "0.1.0"
authors = ["FujiApple <fujiapple852@gmail.com>"]
description = "Rental demo application"
repository = "https://github.com/fujiapple852/rust-daml-bindings"
license = "Apache-2.0"
keywords = ["daml", "api", "ledger"]
categories = ["development-tools"]
edition = "2021"
build = "build.rs"
rust-version = "1.56"

[dependencies]
daml = { path = "../../daml", features = [ "prelude", "grpc", "sandbox" ] }
tokio = { version = "1", features = [ "macros", "rt-multi-thread" ] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"

[build-dependencies]
daml = { path = "../../daml", features = [ "codegen" ] }

[workspace]