[package]
name = "rental_demo"
version = "0.1.0"
authors = ["FujiApple <fujiapple852@gmail.com>"]
description = "Rental demo application"
repository = "https://github.com/fujiapple852/rust-daml-bindings"
license = "Apache-2.0"
keywords = ["daml", "api", "ledger"]
categories = ["development-tools"]
edition = "2021"
build = "build.rs"
rust-version = "1.59.0"

[dependencies]
daml = { path = "../../daml", features = [ "prelude", "grpc", "sandbox" ] }
tokio = { version = "1.17.0", features = [ "macros", "rt-multi-thread" ] }
tracing = "0.1.31"
tracing-subscriber = { version = "0.3.9", features = ["env-filter"] }
anyhow = "1.0.55"

[build-dependencies]
daml = { path = "../../daml", features = [ "codegen" ] }

[workspace]