[package]
name = "darn"
version = "0.1.0"
authors = ["FujiApple <fujiapple852@gmail.com>"]
edition = "2018"

[dependencies]
daml = { path = "../../daml", features = [ "api", "sandbox", "lf", "util" ] }
futures = "0.3"
tokio = { version = "0.2", features = [ "rt-threaded", "macros" ] }
log = "0.4"
log4rs = "0.11"
clap = "2.33"
ptree = "0.2"
serde_json = "1.0"
prettytable-rs = "0.8"
itertools = "0.9"
anyhow = "1.0"
thiserror = "1.0"
uuid = { version = "0.8", features = ["v4"] }
zip = "0.5"