[package]
name = "darn"
version = "0.1.0"
authors = ["FujiApple <fujiapple852@gmail.com>"]
edition = "2018"

[dependencies]
daml = { path = "../../daml", features = [ "prelude", "api", "sandbox", "lf_full", "util" ] }
tokio = { version = "0.2", features = [ "rt-threaded", "macros" ] }
clap = "2.33"
prettytable-rs = "0.8"
itertools = "0.9"
anyhow = "1.0"
thiserror = "1.0"

[workspace]